updated dependencies's version

--- a/package.json
+++ b/package.json
@@ -21,15 +21,7 @@
   },
   "homepage": "http://github.com/andris9/nodemailer-direct-transport",
   "dependencies": {
-    "nodemailer-shared": "1.1.0",
-    "smtp-connection": "2.12.0"
-  },
-  "devDependencies": {
-    "chai": "^3.5.0",
-    "grunt": "^1.0.1",
-    "grunt-eslint": "^19.0.0",
-    "grunt-mocha-test": "^0.12.7",
-    "mocha": "^3.0.2",
-    "smtp-server": "^1.14.2"
+    "nodemailer-shared": "^2.0.0",
+    "nodemailer": "^6.6.5"
   }
 }
